# 20MTD-Android-Hook

./: CMakeLists.txt  README.md
core/: main.cpp
core/hack/: MainThread.cpp  MainThread.h
feature/: Feature.h  FeatureManager.cpp  FeatureManager.h
feature/PlayerController/AutoFire/: AutoFire.cpp  AutoFire.h
feature/PlayerController/GodMode/: GodMode.cpp  GodMode.h
feature/PlayerController/GunMod/: GunMod.cpp  GunMod.h
feature/PlayerController/PlayerAttrMod/: PlayerAttrMod.cpp  PlayerAttrMod.h
feature/SaveMod/: SaveMod.cpp  SaveMod.h
hook/: Hook.cpp  Hook.h
hook/hookEGL/: HookEGL.cpp  HookEGL.h
hook/hookGame/: HookGame.cpp  HookGame.h
hook/hookInput/: HookInput.cpp  HookInput.h
il2cpp/: Il2Cpp.cpp  Il2Cpp.h
il2cppOffset/: Offset.cpp  Offset.h
menu/: Config.h  Menu.h
sdk/: Class.h
utils/: utils.h
utils/Logger/: Logger.h
